<resources>
    <string name="app_name">LoginDataStoreFix</string>
    <string name="masukkan_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="don_t_have_an_account_yet_please_register_first">don\'t have an account yet? please register first</string>
    <string name="login">login</string>
    <string name="regist">Regist</string>
    <string name="enter_password_confirmation">Enter password confirmation</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_username">Enter Username</string>
</resources>